tests/ui/parser/unclosed_delim_mod.rs
fn main() {}

pub struct Value {}
pub fn new() -> Result<Value, ()> {
    Ok(Value {
    }
}
//~^ ERROR mismatched closing delimiter
